# finalyear-project

./: README.md
.devcontainer/: devcontainer.json
GeneAlcPredict/: app.py  pyproject.toml
GeneAlcPredict/data/: heart_dataset_loader.py  sample_schema.py
GeneAlcPredict/models/: data_processor.py  deep_learning_model.py  disease_predictor.py
GeneAlcPredict/utils/: helpers.py  pdf_generator.py  visualizations.py
GeneAlcPredict/utils/services/: openai_service.py
