[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openai>=1.108.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "reportlab>=4.4.4",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.49.1",
    "tensorflow>=2.20.0",
]
